--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traveling Perfil de viajens</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="./styles/global.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav class="container">
+            <a href="" id="logo">
+                <img src="./assets/icons/Logo.svg" alt="logo-marca">
+            </a>
+            <ul id="primary-menu">
+                <li>
+                    <a href="#">
+                        <img src="./assets/icons/MagnifyingGlass.svg" alt="icone-lupa">
+                    </a>
+                </li>
+                <li><a href="#">Explorar</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#">
+                    <img src="./assets/imgs/Profile pic.svg" alt="">
+                </a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
