--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
             </div>
 
         </section>
+        <section id="galery">
+            <img src="./assets/imgs/Image 01.png" alt="">
+            <img src="./assets/imgs/Image 02.png" alt="">
+            <img src="./assets/imgs/Image 03.png" alt="">
+            <img src="./assets/imgs/Image 04.png" alt="">
+            <img src="./assets/imgs/Image 05.png" alt="">
+            <img src="./assets/imgs/Image 06.png" alt="">
+            <img src="./assets/imgs/Image 07.png" alt="">
+            <img src="./assets/imgs/Image 08.png" alt="">
+            <img src="./assets/imgs/Image 09.png" alt="">
+            <img src="./assets/imgs/Image 10.png" alt="">
+            <img src="./assets/imgs/Image 11.png" alt="">
+            <img src="./assets/imgs/Image 12.png" alt="">
+  
+        </section>
     </main>
     
 </body>
