--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
   
         </section>
     </main>
+    <footer>
+        <span>Travelgram &copy; 2025</span>
+        <span>
+            termos de uso
+        </span>
+        <span>
+            Politica de provacidade
+        </span>
+    </footer>
     
 </body>
 </html>
